<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.feedback.view.ui.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_cardview_shape"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/bottomLay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/labelTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="10dp"
                        android:text="@string/feedback_from"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/questionTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/question1"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/labelTxt" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onCheckedChanged="@{viewModel.onCheckedChange}"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:weightSum="2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/questionTxt">

                        <RadioButton
                            android:id="@+id/radioFirstBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Yes" />

                        <RadioButton
                            android:id="@+id/radioSecondBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="No" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/questionSecondTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/question2"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

                    <EditText
                        android:id="@+id/queSecEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:onTextChanged="@{viewModel::onTextAnsSecondChanged}"
                        android:paddingStart="4dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:singleLine="true"
                        android:text="@={viewModel.ansSecond}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/questionSecondTxt" />

                    <TextView
                        android:id="@+id/questionThirdTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/question3"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/queSecEdt" />

                    <EditText
                        android:id="@+id/queThirdEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:onTextChanged="@{viewModel::onTextAnsThirdChanged}"
                        android:paddingStart="4dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:singleLine="true"
                        android:text="@={viewModel.ansThird}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/questionThirdTxt" />

                    <TextView
                        android:id="@+id/questionForthTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/question4"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/queThirdEdt" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onItemSelected="@{(parent,view,pos,id)->viewModel.onSelectItem(parent,view,pos,id)}"
                        android:paddingTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/questionForthTxt" />

                    <TextView
                        android:id="@+id/questionFifthTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/question5"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner" />

                    <RatingBar
                        android:id="@+id/ratingFirst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:rating="@{viewModel.ansFifth}"
                        app:OnRatingBarChangeListener="@{viewModel.firstRatingChangeListener}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/questionFifthTxt"></RatingBar>

                    <TextView
                        android:id="@+id/questionSixTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/question6"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ratingFirst" />

                    <RatingBar
                        android:id="@+id/ratingSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:rating="@{viewModel.ansSixth}"
                        app:OnRatingBarChangeListener="@{viewModel.secondRatingChangeListener}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/questionSixTxt"></RatingBar>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <include layout="@layout/inflate_bottom_tab" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>